# my-task

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENT_PLAN.md  LICENSE  Makefile  README.md  TODO.md
.claude/: agents  settings.local.json  skills
.claude-plugin/: marketplace.json
.claude/commands/: inspect.md  reassemble.md  retreat.md
.cursor/plans/: list_テーブル色付け_c34f30ae.plan.md  list_テーブル表示改善_69face1b.plan.md  my-task_cli_実装_8bc1605e.plan.md  project色完全ランダム化_7ead540e.plan.md
.cursor/rules/: general.mdc
cc-plugin/.claude-plugin/: plugin.json
cc-plugin/agents/: evaluator.md  generator.md  planner.md
cc-plugin/skills/dev-cycle/: SKILL.md
cc-plugin/skills/dev-cycle/references/: harness-engineering.md
cc-plugin/skills/release/: SKILL.md
cc-plugin/skills/release/references/: release-notes-rules.md
cc-plugin/skills/text-to-tasks/: SKILL.md
docs/: CHANGELOG.md  OVERVIEW.md  README_ja.md
docs/release/: v0.10.0.md  v0.10.1.md  v0.11.0.md  v0.2.0.md  v0.4.0.md  v0.5.0.md  v0.5.2.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.8.1.md  v0.8.2.md  v0.9.0.md  v1.0.0.md
src/: config.rs  date_parser.rs  db.rs  main.rs  model.rs
src/commands/: add.rs  close.rs  done.rs  edit.rs  list.rs  mod.rs  notify.rs  projects.rs  search.rs  show.rs
tests/: add_test.rs  close_test.rs  done_test.rs  edit_test.rs  list_test.rs  notify_test.rs  projects_test.rs  search_test.rs  show_test.rs
