[package]
name = "my_task"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "my-task"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
dirs = "6"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
