[package]
name = "my_task"
version = "0.1.0"
edition = "2021"
authors = ["tominaga-h"]
description = "A simple CLI task manager powered by SQLite"
readme = "README.md"
license = "MIT"
keywords = ["cli", "task", "todo", "productivity", "sqlite"]
categories = ["command-line-utilities"]
repository = "https://github.com/mad-tmng/my-task"
rust-version = "1.93"

[[bin]]
name = "my-task"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
comfy-table = "7"
dirs = "6"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
